welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: Boolean does not take parameters
	if (versLAvant()){
                      ^Program:8: error: Boolean does not take parameters
	if (!versLAvant()){
                       ^